2005-05-19 Stuart Prescott <s.prescott@unimelb.edu.au>
	* fix up to magic_quotes_gpc handling (wouldn't it be nice if it could be turned off at runtime?) 

2005-05-18 Stuart Prescott <s.prescott@unimelb.edu.au>
	* allow different hosts in install script 
	* change system user passwd handling in install script to not use PASSWORD() 

2005-05-17 Stuart Prescott <s.prescott@unimelb.edu.au>
	* create JoinMatrix class to handle data in one table that has coordinates (keys) from two tables 
	* edit standard costs for instrument usage in matrix form 

2005-05-16 Stuart Prescott <s.prescott@unimelb.edu.au>
	* relaxed constraint requiring alphabetic username 
	* permitted an admin-configurable regexp to test usernames 
	* bugfix in auth error message return 

2005-05-16 Stuart Prescott <s.prescott@unimelb.edu.au>
	* unborked email list action 
	* extended emai list form to allow a value separator to be specified 
	* re-enabled email list in adminmenu 

2005-05-15 Stuart Prescott <s.prescott@unimelb.edu.au>
	* joindata count num rows JIT update 

2005-05-15 Stuart Prescott <s.prescott@unimelb.edu.au>
	* implemented an out-of-band data mechanism to permit feedback from complex fields into the reportAction mechanism 

2005-05-13 Stuart Prescott <s.prescott@unimelb.edu.au>
	* CSS clean-ups, including splitting main CSS file for easier theming 

2005-05-13 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled masquerading as another user for admin user and instrument admins 

2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* added a system(mysqldump) call to permit a backup of the entire database. 

2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* first cut at installing script 

2005-05-11 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled comments from either booking or from timeslotrule to appear in calendar view 
	* many CSS changes to make more sense of calendar view 
	* some simple HTML changes to ensure every tr has a td within it (validator.w3.org) 